--- a/pyproject.toml
+++ b/pyproject.toml
@@ -121,7 +121,7 @@ netcdf = "datacube.drivers.netcdf.driver:reader_driver_init"
 [project.entry-points."datacube.plugins.io.write"]
 netcdf = 'datacube.drivers.netcdf.driver:writer_driver_init'
 
-[project.entry-points."datacube.plugins.io.index"]
+[project.entry-points."datacube.plugins.index"]
 postgres = 'datacube.index.postgres.index:index_driver_init'
 null = 'datacube.index.null.index:index_driver_init'
 memory = 'datacube.index.memory.index:index_driver_init'
