More efficient CI

--- a/.github/workflows/doc-qa.yaml
+++ b/.github/workflows/doc-qa.yaml
@@ -2,24 +2,11 @@ name: Doc QA
 on:
   # Triggers the workflow on pull request events for the main branch
   pull_request_target:
-    types:
-      - opened
-
-permissions:
-  pull-requests: write
+    branches:
+      - develop
+      - develop-1.9
 
 jobs:
-  pyspell:
-    runs-on: ubuntu-latest
-    steps:
-      # Spellcheck
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - uses: igsekor/pyspelling-any@v1.0.4
-        name: Spellcheck
-
   doctor-rst:
     name: Lint (DOCtor-RST)
     runs-on: ubuntu-latest
@@ -44,10 +31,3 @@ jobs:
           uses: docker://oskarstark/doctor-rst:1.23.0
           with:
               args: --short --error-format=github --cache-file=/github/workspace/.cache/doctor-rst.cache
-
-  documentation-preview:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: readthedocs/actions/preview@v1
-        with:
-          project-slug: "datacube-core"
