--- a/.github/workflows/doc-qa.yaml
+++ b/.github/workflows/doc-qa.yaml
@@ -1,10 +1,22 @@
 name: Doc QA
+
 on:
-  # Triggers the workflow on pull request events for the main branch
-  pull_request_target:
+  push:
+    branches:
+      - main
+      - develop
+      - develop-1.9
+  pull_request:
     branches:
       - develop
       - develop-1.9
+
+concurrency:
+  # Here the group is defined by the head_ref of the PR
+  group: ${{ github.head_ref }}
+  # Here we specify that we'll cancel any "in progress" workflow of the same group. Thus if we push, ammend a commit and push
+  # again the previous workflow will be cancelled, thus saving us github action build minutes and avoid any conflicts
+  cancel-in-progress: true
 
 jobs:
   doctor-rst:
