--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+      - develop
+      - develop-1.9
   pull_request:
     branches:
       - develop
@@ -60,6 +62,7 @@ jobs:
         version: 0.5.5
         enable-cache: 'true'
         cache-suffix: 3.12
+        python-version: 3.12
 
     - name: Config
       id: cfg
