Which test_3d tests are being run?

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,7 +93,10 @@ jobs:
         cat <<EOF | docker run --rm -i -v $(pwd):/code ${{ env.DOCKER_IMAGE }} bash -
           pip install -e /code/tests/drivers/fail_drivers --no-deps
           pip install -e /code/examples/io_plugin --no-deps
+          which python
+          pip freeze
           pytest -r a \
+            -vv
             --cov datacube \
             --cov-report=xml \
             --doctest-ignore-import-errors \
