[docs] Fix warnings

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,3 +23,10 @@ ignore =
     W605
 
 ignore-names = W,H,A,S,R,T,WS,X,Y,Z,XX,YY,XY,B,M,N,L,NX,NY
+rst-roles =
+    class,
+    func,
+    ref,
+    py:meth,
+    meth,
+    py:class
