--- a/.github/workflows/doc-qa.yaml
+++ b/.github/workflows/doc-qa.yaml
@@ -41,9 +41,11 @@ jobs:
               key: ${{ runner.os }}-doctor-rst-${{ steps.extract_base_branch.outputs.branch }}
 
       -   name: "Run DOCtor-RST"
-          uses: docker://oskarstark/doctor-rst:1.23.0
+          uses: docker://oskarstark/doctor-rst:1.64.0
           with:
               args: --short --error-format=github --cache-file=/github/workspace/.cache/doctor-rst.cache
+          env:
+              DOCS_DIR: 'docs/'
 
   documentation-preview:
     runs-on: ubuntu-latest
