[ci/chore] Split doc preview/QA workflows
Previously, the DOC QA workflow only ran once, when a PR was first
opened, and then if more commits were pushed, it's results were ignored
and it never ran again.

As convenient as this was, for not preventing PRs being merge for
failing Doc QA builds. It's also completely useless!

This split makes the RTD doc preview link comment run once on a new PR
with permission to update the description, and the Doc QA run on any
change to a PR.

--- a/.github/workflows/doc-qa.yaml
+++ b/.github/workflows/doc-qa.yaml
@@ -1,12 +1,9 @@
 name: Doc QA
 on:
   # Triggers the workflow on pull request events for the main branch
-  pull_request_target:
-    types:
-      - opened
-
-permissions:
-  pull-requests: write
+  pull_request:
+    paths:
+      - '**'
 
 jobs:
   pyspell:
@@ -46,10 +43,3 @@ jobs:
               args: --short --error-format=github --cache-file=/github/workspace/.cache/doctor-rst.cache
           env:
               DOCS_DIR: 'docs/'
-
-  documentation-preview:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: readthedocs/actions/preview@v1
-        with:
-          project-slug: "datacube-core"
