--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ env:
   DOCKER_USER: gadockersvc
   DOCKER_IMAGE: opendatacube/datacube-tests:latest
 
+permissions: {}
 
 jobs:
   main:
@@ -28,6 +29,7 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
+        persist-credentials: false
 
     - name: Config
       id: cfg
