--- a/.github/workflows/doc-qa.yaml
+++ b/.github/workflows/doc-qa.yaml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          persist-credentials: false
 
       - uses: igsekor/pyspelling-any@v1.0.4
         name: Spellcheck
@@ -23,6 +24,8 @@ jobs:
     steps:
       -   name: "Checkout"
           uses: actions/checkout@v4
+          with:
+            persist-credentials: false
 
       -   name: "Create cache dir"
           run: mkdir .cache
