Allow GHA to Authenticate with OIDC to PyPI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,9 @@ env:
 jobs:
   main:
     runs-on: ubuntu-latest
+    # Permit authenticating to PyPI
+    permissions:
+      id-token: write
 
     steps:
     - uses: actions/checkout@v4
